Ateração modelo de organização

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -89,7 +89,7 @@ aside form{
 }
 
 #img-circle{
-    background-image: url("../images/imgLog.png");
+    background-image: url("../images/homem_laranja_Pag1.png");
     background-size: contain;
     bottom: -4%;
     left: -3%;
