--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -30,13 +30,67 @@ aside{
     box-shadow: -10px 10px 5px rgb(0, 0, 0, 0.3);
 }
 
+h1{
+    font-family: "Modak", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    color: #44A685;
+    font-size: 50px;
+}
+
 img{
-    width: 40px;
+    width: 300px;
+    height: 300px;
+    object-fit: contain;
+
 }
 
 aside form{
+    height: 100%;
     display: flex;
     flex-direction: column;
+
+}
+input{
+    margin-bottom: 30px;
+    font-size: larger;
+    font-size: 25px;
+}
+
+input:focus{
+    border: none;
+    box-shadow: none;
+}
+
+input:hover{
+    text-shadow: 5px 5px 5px rgb(0, 0, 0, 0.4);
+}
+
+#btnSub{
+    color: #fff;
+    background-color: #44A685;
+    height: 40px;
+    border: 5px 5px 5px rgb(0, 0, 0, 0.3);
+    box-shadow: none;
+    border-radius: 20px;
+}
+
+#btnSub:hover{
+    cursor: pointer;
+    box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.4);
+}
+
+#forgetPass{
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+    color: #44A685;
+}
+
+#forgetPass:hover{
+    text-decoration: underline;
+    cursor: pointer;
+    text-shadow: 5px 5px 5px rgb(0, 0, 0, 0.4);
 }
 
 .login-form{
