--- a/frontend/src/app/componentes/tela1/tela1.component.html
+++ b/frontend/src/app/componentes/tela1/tela1.component.html
@@ -1,16 +1,19 @@
-<div class="caixa">
-  <aside>
-    <img src ="../../../assets/imagens/logo_pjb.png">
-    <img src="../../../assets/imagens/Gestão_PJB_Pag1.png" >
-    <form action="POST">
-        <input class="login-form" type="text" name="" id="login-email" placeholder="Login">
-        <input class="login-form" type="password" name="" id="login-pass" placeholder="Password">
-        <input  routerLink="/tela2" id="btnSub" type="submit" value="Login">
-        <button routerLink="/tela2" id="forgetPass">Esqueci minha senha</button>
-    </form>
-    <img src="../../../assets/imagens/avante.png" alt="">
-  </aside>
+<body>
+  <div class="caixa">
+    <aside>
+      <img src ="../../../assets/imagens/logo_pjb.png">
+      <img src="../../../assets/imagens/Gestão_PJB_Pag1.png" >
+      <form action="POST">
+          <input class="login-form" type="text" name="" id="login-email" placeholder="Login">
+          <input class="login-form" type="password" name="" id="login-pass" placeholder="Password">
+          <input  routerLink="/tela2" id="btnSub" type="submit" value="Login">
+          <button routerLink="/tela2" id="forgetPass">Esqueci minha senha</button>
+      </form>
+      <img src="../../../assets/imagens/avante.png" alt="">
+    </aside>
 
 
-</div>
+  </div>
+</body>
+
 
