--- a/frontend/src/app/componentes/tela2/tela2.component.html
+++ b/frontend/src/app/componentes/tela2/tela2.component.html
@@ -18,7 +18,7 @@
     <img id="logoGestao" src="../../../assets/imagens/Gestão_PJB_Pag1.png" alt="Gestão">
         <div id="buttonsAside">
             <button routerLink="" class="BotPrincipal" id="cadPart">Cadastrar Participantes</button>
-            <button routerLink="" class="BotPrincipal" id="createAtiv">Criar Atividades</button>
+            <button routerLink="/tela7" class="BotPrincipal" id="createAtiv">Criar Atividades</button>
             <button routerLink="" class="BotPrincipal" id="alterData">Alterar Dados do Participante </button>
         </div>
     <img id="logoAvante" src="../../../assets/imagens/avante.png" alt="logoAvante">
