--- a/frontend/src/app/componentes/tela2/tela2.component.css
+++ b/frontend/src/app/componentes/tela2/tela2.component.css
@@ -68,7 +68,7 @@ aside{
   display: flex;
   justify-content: center;
   text-align: center;
-  background-color: #ffffff;
+  background-color: #EFF5F4;
   width: 100vw;
   height: 100vh;
 
@@ -94,16 +94,19 @@ aside{
   margin: 40px;
   justify-content: center;
   align-items: center;
-  margin-top: 250px;
+  margin-top: 300px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 
   .button{
-      margin-bottom: 10px;
-      width: 200px;
-      height: 60px;
-  }
+    margin-bottom: 10px;
+    width: 200px;
+    height: 60px;
+    font-size:medium;
+    font-weight: bold;
+}
+  
 
   section{
       display: flex;
@@ -119,11 +122,18 @@ aside{
   }
 
 
-  #logoPjb{
+  #logo_pjb{
     justify-items: center;
     flex-direction: column;
     position: absolute;
     top: 0;
+  }
+  #logoGestao{
+    justify-items: center;
+    flex-direction: column;
+    position: absolute;
+    padding-top: 180px;
+
   }
 
   #logoAvante{
@@ -132,12 +142,6 @@ aside{
     bottom: 0;
   }
 
-  #logoGestao{
-    justify-items: center;
-    flex-direction: column;
-    position: absolute;
-    top: 100;
-  }
 
 @media (max-width:1280px){
   .BotPrincipal{
