--- a/frontend/src/app/componentes/tela3/tela3.component.html
+++ b/frontend/src/app/componentes/tela3/tela3.component.html
@@ -8,7 +8,7 @@
     <div id="buttons">
         <button routerLink="" class="button" id="bt_ini">Página Inicial</button>
         <button routerLink="/tela3" class="button" id="bt_calen">Calendário</button>
-        <button routerLink="" class="button" id="bt_ativ">Aprovar Atividades</button>
+        <button routerLink="/tela6" class="button" id="bt_ativ">Aprovar Atividades</button>
         <button routerLink="" class="button" id="bt_sair">Sair</button>
     </div>
   </section>
