--- a/frontend/src/app/componentes/tela7/tela7.component.html
+++ b/frontend/src/app/componentes/tela7/tela7.component.html
@@ -8,7 +8,7 @@
     <div id="buttons">
         <button routerLink="" class="button" id="bt_ini">Página Inicial</button>
         <button routerLink="/tela3" class="button" id="bt_calen">Calendário</button>
-        <button routerLink="" class="button" id="bt_ativ">Aprovar Atividades</button>
+        <button routerLink="/tela6" class="button" id="bt_ativ">Aprovar Atividades</button>
         <button routerLink="" class="button" id="bt_sair">Sair</button>
     </div>
   </section>
@@ -24,9 +24,9 @@
         </div>
         <div class="calendario">
           <div class="header">
-            <button id="Voltar"><</button>
-            <h2>Setembro 2023</h2>
-            <button id="pular">></button>
+            <button id="anterior"><</button>
+            <h2 id="mesesCalen">Setembro</h2>
+            <button id="sucessor">></button>
           </div>
           <div class="dias">
               <div class="dia"><strong>Dom</strong></div>
