--- a/frontend/src/app/componentes/tela3/tela3.component.html
+++ b/frontend/src/app/componentes/tela3/tela3.component.html
@@ -18,7 +18,9 @@
         </div>
         <div class="calendario">
           <div class="header">
-              <h2>Setembro 2023</h2>
+            <button id="anterior"><</button>
+            <h2 id="mesesCalen">Setembro</h2>
+            <button id="sucessor">></button>
           </div>
           <div class="dias">
               <div class="dia"><strong>Dom</strong></div>
