--- a/frontend/src/app/componentes/tela6/tela6.component.html
+++ b/frontend/src/app/componentes/tela6/tela6.component.html
@@ -16,15 +16,18 @@
         <div id="btnTela3">
             <button routerLink="/tela2" class="botVolta" id="btnVolt">Voltar</button>
         </div>
-        <p id="aproAtiv">Aprovar Atividades</p>
+        <p id="aproAtiv">Aprovar Atividade</p>
         <div id="caixaAside">
-          <div class="perguntasAside" >
-            <input  type="text" name="" id="nomeAtiv" placeholder="Nome da Atividade:">
-            <input  type="text" name="" id="topoAtiv" placeholder="Tipo de Atividade:">
-            <input  type="text" name="" id="descAtiv" placeholder="Descrição:">
-            <input  type="text" name="" id="dataCalen" placeholder="Data:">
-
+          <div  id="perAside" >
+            <input class="perguntasAside" type="text" name="" id="nomeAtiv" placeholder="Nome da Atividade:">
+            <input class="perguntasAside" type="text" name="" id="topoAtiv" placeholder="Tipo de Atividade:">
+            <input class="perguntasAside" type="text" name="" id="descAtiv" placeholder="Descrição:">
+            <input class="perguntasAside" type="text" name="" id="dataCalen" placeholder="Data:">
+            <div id="mudar">
+            <button id="btnCheck"><img src="../../../assets/imagens/check.png" alt=""></button>
+            <button id="btnClose"><img src="../../../assets/imagens/close.png" alt=""></button>
           </div>
-        </div>
+          </div>
+            </div>
   </aside>
 </main>
