--- a/frontend/src/app/componentes/tela7/tela7.component.css
+++ b/frontend/src/app/componentes/tela7/tela7.component.css
@@ -188,6 +188,7 @@ aside{
     'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
     color: #43665A;
     justify-content: center;
+    font-weight: bold;
 }
 
 #nomeAtiv{
