--- a/frontend/src/app/componentes/tela6/tela6.component.css
+++ b/frontend/src/app/componentes/tela6/tela6.component.css
@@ -1,5 +1,5 @@
 *{
-  padding: 0;
+
   margin: 0;
   box-sizing: border-box;
 }
@@ -119,14 +119,32 @@ aside{
     bottom: 0;
 }
 
-.perguntasAside{
-  justify-content: center;
-  justify-items: center;
-  flex-direction: column;
+#perAside{
   position: absolute;
+  text-align: left;
+  padding: 20px;
+  top: 5%;
+  left:7%;
+  padding-top: 20px;
+  border-radius: 20px;
+  background-color: #EFF5F4;
+  height: 250px;
+  width: 670px;
+}
+
+.perguntasAside{
+  background-color: #EFF5F4;
+}
 
 
-
+#mudar{
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 17%;
+  left: 83%;
+  flex-direction: column;
+  gap: 10px;
 
 }
 
@@ -176,13 +194,15 @@ aside{
 
 #aproAtiv{
   display: flex;
-  padding-top: 50px;
+  position: absolute;
+  margin-top: 70px;
   font-size: 250%;
   font-family:'Lucida Sans', 'Lucida Sans Regular',
-    'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+  'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
   color: #43665A;
   justify-content: center;
   justify-items: center;
+  font-weight: bold;
 }
 
 #nomeAtiv{
@@ -219,6 +239,38 @@ aside{
   height: 50px;
   width: 500px;
   border-bottom: 2px solid #43665A;
+}
+
+#caixaAside{
+  padding-bottom: 500px;
+  height: 600px;
+  justify-content: center;
+  align-items: center;
+  background-color: #FFFFFF;
+  width: 800px;
+  position: absolute;
+  top: 130px;
+}
+
+#btnClose{
+  background-color: #f39c12;
+  background-position: center;
+  width: 80px;
+  height: 80px;
+  cursor: pointer;
+  border-radius: 20px;
+  text-align: center;
+
+}
+
+#btnCheck{
+  background-color: #44A685;
+  background-position: center;
+  width: 80px;
+  height: 80px;
+  cursor: pointer;
+  border-radius: 20px;
+
 }
 
 
