--- a/frontend/src/app/componentes/tela2/tela2.component.css
+++ b/frontend/src/app/componentes/tela2/tela2.component.css
@@ -33,6 +33,9 @@ section{
   gap: 10px;
 }
 
+
+
+
 #presentUser h1{
   color: #fff;
 }
@@ -50,6 +53,7 @@ section{
   border-radius: 15px;
   border-color: #ffffff;
   box-shadow: none;
+
 }
 
 
@@ -74,12 +78,7 @@ aside{
 
 }
 
-#buttons{
-  margin-top: 20%;
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-}
+
 
 
 .BotPrincipal{
@@ -106,7 +105,7 @@ aside{
     font-size:medium;
     font-weight: bold;
 }
-  
+
 
   section{
       display: flex;
@@ -142,17 +141,69 @@ aside{
     bottom: 0;
   }
 
+  #menuInic{
+    visibility: hidden;
+  }
+
 
 @media (max-width:1280px){
+
+  aside{
+    padding-top: 25;
+    border-top : 60px solid #01526F;
+
+
+  }
   .BotPrincipal{
     flex-direction: column;
     margin: 12px;
+  }
+
+
+  section{
+    width: 0%;
+    background-color: #01526F;
+    z-index: 1;
+
+  }
+  section:hover #buttons{
+    opacity: 1;
+    visibility: visible;
+
+  }
+
+  section:hover{
+    width: 350px;
+
+  }
+
+  #menuInic{
+    visibility: visible;
+    width: 50px;
+  }
+
+  #divisor-line{
+    visibility: hidden;
+  }
+
+
+  #presentUser{
+    visibility: hidden;
+  }
+
+  #buttons{
+    opacity: 0;
+  }
+
+  .imgsPrinci{
+    display: none;
   }
 }
 
 @media (max-width:480px){
   main{
     padding: 20px;
+    border: 0;
   }
 }
 
