--- a/frontend/src/app/componentes/tela2/tela2.component.html
+++ b/frontend/src/app/componentes/tela2/tela2.component.html
@@ -6,6 +6,7 @@
         <span id="nomeUser">leticia</span>
     </div>
     <hr id="divisor-line">
+    <img  id="menuInic" src="../../../assets/imagens/menu.png" alt=""  >
     <div id="buttons">
         <button routerLink="" class="button" id="bt_ini">Página Inicial</button>
         <button routerLink="/tela3" class="button" id="bt_calen">Calendário</button>
@@ -14,13 +15,13 @@
     </div>
   </section>
   <aside>
-    <img id="logo_pjb" src="../../../assets/imagens/logo_pjb.png" alt="logo_pjb">
-    <img id="logoGestao" src="../../../assets/imagens/Gestão_PJB_Pag1.png" alt="Gestão">
+    <img class="imgsPrinci" id="logo_pjb" src="../../../assets/imagens/logo_pjb.png" alt="logo_pjb">
+    <img class="imgsPrinci" id="logoGestao" src="../../../assets/imagens/Gestão_PJB_Pag1.png" alt="Gestão">
         <div id="buttonsAside">
-            <button routerLink="" class="BotPrincipal" id="cadPart">Cadastrar Participantes</button>
+            <button routerLink="/tela4" class="BotPrincipal" id="cadPart">Cadastrar Participantes</button>
             <button routerLink="/tela7" class="BotPrincipal" id="createAtiv">Criar Atividades</button>
-            <button routerLink="" class="BotPrincipal" id="alterData">Alterar Dados do Participante </button>
+            <button routerLink="/tela5" class="BotPrincipal" id="alterData">Alterar Dados do Participante </button>
         </div>
-    <img id="logoAvante" src="../../../assets/imagens/avante.png" alt="logoAvante">
+    <img class="imgsPrinci" id="logoAvante" src="../../../assets/imagens/avante.png" alt="logoAvante">
   </aside>
 </main>
