--- a/frontend/src/app/componentes/tela3/tela3.component.html
+++ b/frontend/src/app/componentes/tela3/tela3.component.html
@@ -5,6 +5,7 @@
         <span id="nomeUser">leticia</span>
     </div>
     <hr id="divisor-line">
+    <img  id="menuInic" src="../../../assets/imagens/menu.png" alt=""  >
     <div id="buttons">
         <button routerLink="" class="button" id="bt_ini">Página Inicial</button>
         <button routerLink="/tela3" class="button" id="bt_calen">Calendário</button>
