--- a/frontend/src/app/componentes/tela2/tela2.component.html
+++ b/frontend/src/app/componentes/tela2/tela2.component.html
@@ -21,6 +21,7 @@
             <button routerLink="/tela4" class="BotPrincipal" id="cadPart">Cadastrar Participantes</button>
             <button routerLink="/tela7" class="BotPrincipal" id="createAtiv">Criar Atividades</button>
             <button routerLink="/tela5" class="BotPrincipal" id="alterData">Alterar Dados do Participante </button>
+            <button routerLink="/tela8" class="BotPrincipal" id="chamada">Lista de Chamada </button>
         </div>
     <img class="imgsPrinci" id="logoAvante" src="../../../assets/imagens/avante.png" alt="logoAvante">
   </aside>
