--- a/frontend/src/app/componentes/tela7/tela7.component.html
+++ b/frontend/src/app/componentes/tela7/tela7.component.html
@@ -24,7 +24,7 @@
         </div>
         <div class="calendario">
           <div class="header">
-            <button id="anterior"><</button>
+            <button id="anterior"></button>
             <h2 id="mesesCalen">Setembro</h2>
             <button id="sucessor">></button>
           </div>
